--- a/src/components/Bustype/bus.css
+++ b/src/components/Bustype/bus.css
@@ -2,6 +2,7 @@
     display: flex;
 width: 100%;
 gap: 50px;
+margin-left: 10px;
 
 
 
@@ -48,7 +49,7 @@ gap: 50px;
 }
 
 .dList{
-    font-size: 30px;
+    font-size: 25px;
     row-gap: 20px;
 }
 
