--- a/src/components/tour/tour.css
+++ b/src/components/tour/tour.css
@@ -1,17 +1,16 @@
-/* .tourPackage{
-    
+ 
 
-  display: flex;  
-  flex-direction: column;
+ .tourUpdate{
+    display: flex;
     justify-content: center;
-} */
+    width: 100%;
+ }
 .tourPlace{
     width: 100%;
     flex-direction: column;
-    max-width: 1024px;
-  margin-left: 15%;
+    max-width: 1200px;
+
  
-    justify-content: space-between;
 }
 
 
@@ -51,6 +50,21 @@
     margin-left: 20px;
     margin-right: 20px;
     font-weight: 100;
+    
+}
+.aTour>h1{
+ color: rgb(72, 72, 238);
+ font-weight: bolder;
+
+}
+.aTour>h2{
+    
+    
+    font-weight: bold;
+    
+}
+.aTour>span{
+    font-weight:bold;
     
 }
 .pic{
@@ -134,4 +148,9 @@
         display: flex;
         flex-direction: row;
         gap: 20px;
+    }
+
+    .busType{
+        
+        width: 100%;
     }
