--- a/src/components/Bustype/bus.css
+++ b/src/components/Bustype/bus.css
@@ -1,25 +1,31 @@
 .toExplore{
     display: flex;
-width: 100%;
-gap: 50px;
-margin-left: 10px;
+
+
+
 
 
 
 }
 .aboutExplore{
     width: 100%;
-    
+    max-width: 1024px;
     display: flex;
     gap :20px;
+    align-items: center;
+    justify-content: center;
     
- 
+}
+
+.aExplore{
+    margin-top: 70px;
+    
+}
     
 
-}
 .cExplore{
     list-style: none;
-    row: gap 20px; ;
+   
 }
     
 
@@ -32,7 +38,7 @@ margin-left: 10px;
 .dExplore{
     display: flex;
     flex-direction: row;
-    column-gap: 20px;
+    column-gap: 5px;
     
 }
 
@@ -45,11 +51,11 @@ margin-left: 10px;
     justify-content: space-between;
  
 
-    column-gap: 50px;
+    
 }
 
 .dList{
     font-size: 25px;
-    row-gap: 20px;
+    
 }
 
