--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,32 +1,41 @@
 .header{
  
-    background-color:rgb(76, 76, 219);
+    background-color:rgb(116, 116, 251);
     display: flex;
     justify-content: center;
    height: 60px;
+
+   ;
 }
 
 .headerList{
     width: 100%;
-    color: blue;
+    color: rgb(116, 116, 251);
     justify-content: space-between;
     display: flex;
     max-width: 1024px;
-
+    align-items: center;
+    overflow: hidden;
 
 }
 
 .explore{
-    color: white;
+    color: black;
+    
 }
 
+
+.explore>h1{
+    color: black;
+ 
+}
 
 
 .vehicle{
     
     margin-left: 30px;
     padding: 6px 6px;
-    background-color: rgb(76, 76, 219);
+    background-color: rgb(116, 116, 251);
     border: none;
     font-size: medium;
     
@@ -43,6 +52,6 @@
 }
 .I{
     display: flex;
-  
+  gap: 60px;
 }
 
