--- a/src/pages/Booked/booked.css
+++ b/src/pages/Booked/booked.css
@@ -1,16 +1,77 @@
 .aBooked{
     display: flex;
     flex-direction: column;
+    
+
 }
 
 
 .bBooked{
     display: flex;
-    flex-direction: row;
-    /* background-color: yellow; */
-    width: 100%;
-    height: 100px;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
+    width: 100%; 
     
+    /* background-color: blue; */
+ 
+    align-items: center;
+    /* margin-top: 70px;
+    margin-bottom: 50px; */
+   background-color: #F5F2EA;
+   height: 100%;
+    
+}
+.dBooked{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 400px;
+}
+.dBooked>span{
+    margin-left: 35%;
+    font-weight: bold;
+}
+.dBooked>label{
+    margin-left: 30%;
+    margin-bottom: 30px;
+}
+.cBooked{
+  
+    width: 500px;
+display: flex;
+flex-direction: column;
+/* gap: 10px; */
+margin-bottom: 10px;
+/* align-items: center;  */
+
+}
+.cBooked>input{
+    width: 200px;
+    margin-left: 15%;
+    
+    
+}
+.cBooked>span{
+    margin-left: 15%;
+    row-gap: 0;
+    margin-top: 10px;
+}
+.dBooked>button{
+  height: 30px;
+  width: 210px;
+  margin-left: 18%;
+  margin-top: 20px;
+    background-color:#FDC886 ;
+    border: none;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.dBooked>h1{
+    font-size: medium;
+    font-weight:bold ;
+    margin-left: 18%;
 }
